versioned_docs/version-1.4/cloud/preview-environments/dashboard.mdx
---
title: Configuring Preview Environments
description: Create preview environments for your application using the Okteto Cloud Dashboard
sidebar_label: Configure
id: dashboard
---

import Image from "@theme/Image";

There are two ways to configure [Preview Environments](cloud/preview-environments/overview.mdx) using Okteto Cloud for your GitHub repositories. This page will be covering the easier of the two methods, that is, using the Okteto Cloud Dashboard. If you want more control and configuration options for your Preview Environments, [GitHub Actions](cloud/preview-environments/github.mdx) are the way to go. Before proceeding with the steps here, please ensure you've gone through the [Prerequisites](cloud/preview-environments/overview.mdx#prerequisites) section.

Note that this method is not applicable for users of [Okteto Self-Hosted](self-hosted.mdx) or Okteto for Teams. Please checkout [GitHub Actions](cloud/preview-environments/github.mdx) for configuring Preview Environments in those cases.

### Step 1: Log into Okteto Cloud

The first step is going to [Okteto Cloud](https://cloud.okteto.com/) and logging in. Once you log in, head over to the Preview Environments section using the sidebar menu.

<p align="center">
  <Image
    src={require("@site/static/img/preview-env-dashboard.png").default}
    alt="preview env dashboard on okteto cloud"
  />
</p>

In this guide, we will set up Preview Environments for a fork of the [movies-preview-environments](https://github.com/okteto/movies-preview-environments) repository. Head to that repository and [create a fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) of it under your GitHub account. Feel free to follow along with some other repository in your GitHub account once you've [configured](cloud/preview-environments/overview.mdx#prerequisites) it.

### Step 2: Add Your Repository

Click on the "Add a repository" button on the dashboard. If you're doing this for the first time, you'll have to install and authorize Okteto Cloud on the GitHub organization/account having the repository you want to configure the Preview Environments for. You can read more about what permissions Okteto Cloud requests and why over [here](cloud/permissions.mdx).

<p align="center">
  <Image
    src={require("@site/static/img/auth-okteto-cloud.png").default}
    alt="install and authorize Okteto Cloud on github account"
  />
</p>

Please note that you can only install Okteto Cloud for repositories belonging to your own GitHub account. Only org admins can install Okteto Cloud in the case of repositories part of a GitHub organization. Non-admin users will have the option of sending a request to install Okteto Cloud to admins through GitHub.

Once you do that, you should see your repository appear in the list.

<p align="center">
  <Image
    src={require("@site/static/img/repo-list.png").default}
    alt="list of repositories"
  />
</p>

Select it and click the "Add" button. Additionally, you can also configure variables to configure your preview environment. These variables work just like the [built-in environment variables](cloud/okteto-cli.mdx#built-in-environment-variables).

### Step 3: Make a Pull Request

That's right, this was all the configuration you needed to do! Head over to your repository now and make a pull request. After you make a pull request, Okteto will add the application endpoints to it as a comment once the Preview Environment has been deployed.

<p align="center">
  <Image
    src={require("@site/static/img/pr-endpoints.png").default}
    alt="endpoints for the pr"
  />
</p>

Sharing this with team members is the best way to get their attention for reviews 😛

You should also be able to see the pull request details along with the endpoints on the Okteto Cloud Dashboard.

<p align="center">
  <Image
    src={require("@site/static/img/pr-in-dashboard.png").default}
    alt="endpoints for the pr"
  />
</p>

### Next Steps

You've successfully configured Preview Environments for your GitHub repository and witnessed the magic of Okteto. However, this is only a part of what Okteto can do for your team's development workflow. You can take the next step towards enhancing your dev experience by looking at Okteto's [Development Environments](reference/development-environments.mdx).
